overflow y bug fix

--- a/src/assets/css/chat.css
+++ b/src/assets/css/chat.css
@@ -1,5 +1,7 @@
 .chat-container {
   height: 98vh;
+  max-width: 600px;
+  display: block;
 }
 .chat-back {
   height: 10%;
@@ -8,7 +10,7 @@
   height: 90%;
   background: rgba(250, 250, 250, 1);
   width: 100%;
-  max-width: 600px;
+
   padding: 20px;
   margin: 10px;
 }
